Fix spacing on boxes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -219,6 +219,10 @@ strong {
     margin-right: 16px !important;
   }
 
+  .mb-4-md {
+    margin-bottom: 24px !important;
+  }
+
   .ml-4-md {
     margin-left: 24px !important;
   }
